[tool.poetry]
name = "insta-tools"
version = "0.2.0"
description = ""
authors = ["Monsignor <21285741+MonsignorEduardo@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "insta_tools", from = "." }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# command_name = module_for_handler : function_for_handler
insta_tools = 'insta_tools.main:main'

[tool.poetry.dependencies]
python = "^3.12"
instagrapi = "^2.0.0"
colorama = "^0.4.6"
pillow = "^10.1.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
black = "^23.10.1"


[tool.black]
line-length = 110
[tool.ruff]
line-length = 110
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "A",   # flakes8-builtins
    "COM", # flakes8-commas
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "I",   # isort
    "N",   # pep8 naming
    "UP",  # pyupgrade  
    "S",   # bandit
]
ignore = ["S101"] #Assert statements should be used in tests

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
